src/config/snapshots/http_dragonfly__config__listener__tests__http_method.snap
---
source: src/config/listener.rs
expression: methods
---
[
  GET,
  POST,
  PUT,
  PATCH,
  DELETE,
  OPTIONS,
  HEAD,
]
