src/config/snapshots/http_dragonfly__config__listener__tests__listen_on-2.snap
---
source: src/config/listener.rs
expression: "ListenOn::from_str(\"1.2.3.4:8888\").unwrap()"
---
ListenOn(
  ip: "1.2.3.4",
  port: 8888,
)
