src/config/snapshots/http_dragonfly__config__listener__tests__listen_on-3.snap
---
source: src/config/listener.rs
expression: "ListenOn::from_str(\"0.0.0.0:8888\").unwrap()"
---
ListenOn(
  ip: "0.0.0.0",
  port: 8888,
)
