src/config/snapshots/http_dragonfly__config__listener__tests__listen_on.snap
---
source: src/config/listener.rs
expression: "ListenOn::default()"
---
ListenOn(
  ip: "0.0.0.0",
  port: 8080,
)
