src/config/snapshots/http_dragonfly__config__listener__tests__wrong_http_method.snap
---
source: src/config/listener.rs
expression: wrong_method
---
Err(
    Error("unknown variant `UPDATE`, expected one of `GET`, `POST`, `PUT`, `PATCH`, `DELETE`, `OPTIONS`, `HEAD`", line: 10, column: 20),
)
